--- a/JS_Drumkit/index.html
+++ b/JS_Drumkit/index.html
@@ -1,73 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS Drum Kit</title>
-
-    <!-- bootstrap -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-      crossorigin="anonymous"
-    ></script>
-
-    <!-- fonts -->
-
-    <link rel="stylesheet" href="mystyles.css" />
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
+</head>
+<body>
+  <section class="wrapper">
     <div class="keys">
-      <div class="key" id="a">
-        <h1>A</h1>
+      <div data-key = "65" class="key">
+        <kbd>A</kbd>
         <span class="sound">CLAP</span>
       </div>
-      <div class="key" id="s">
-        <h1>S</h1>
+      <div data-key = "83" class="key">
+        <kbd>S</kbd>
         <span class="sound">HITHAT</span>
       </div>
-      <div class="key" id="d">
-        <h1>D</h1>
+      <div data-key = "68" class="key">
+        <kbd>D</kbd>
         <span class="sound">KICK</span>
       </div>
-      <div class="key" id="f">
-        <h1>F</h1>
+      <div data-key = "70" class="key">
+        <kbd>F</kbd>
         <span class="sound">OPENHAT</span>
       </div>
-      <div class="key" id="g">
-        <h1>G</h1>
+      <div data-key = "71" class="key">
+        <kbd>G</kbd>
         <span class="sound">BOOM</span>
       </div>
-      <div class="key" id="h">
-        <h1>H</h1>
+      <div data-key = "72" class="key">
+        <kbd>H</kbd>
         <span class="sound">RIDE</span>
       </div>
-      <div class="key" id="j">
-        <h1>J</h1>
+      <div data-key = "74" class="key">
+        <kbd>J</kbd>
         <span class="sound">SNARE</span>
       </div>
-      <div class="key" id="k">
-        <h1>K</h1>
+      <div data-key = "75" class="key">
+        <kbd>K</kbd>
         <span class="sound">TOM</span>
       </div>
-      <div class="key" id="l">
-        <h1>L</h1>
+      <div data-key = "76" class="key extra">
+        <kbd>L</kbd>
         <span class="sound">TINK</span>
       </div>
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="index.js"></script>
-  </body>
+    <audio data-key="65" src="sounds/clap.wav"></audio>
+    <audio data-key="83" src="sounds/hihat.wav"></audio>
+    <audio data-key="68" src="sounds/kick.wav"></audio>
+    <audio data-key="70" src="sounds/openhat.wav"></audio>
+    <audio data-key="71" src="sounds/boom.wav"></audio>
+    <audio data-key="72" src="sounds/ride.wav"></audio>
+    <audio data-key="74" src="sounds/snare.wav"></audio>
+    <audio data-key="75" src="sounds/tom.wav"></audio>
+    <audio data-key="76" src="sounds/tink.wav"></audio>
+  
+  </section>
+
+  <script src="index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+</body>
 </html>
